<resources>
    <string name="app_name">AnGithub</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sort">排序</string>
    <string name="action_language">语言</string>
    <string name="sort_field_stars">红星数量</string>
    <string name="sort_field_forks">分支数量</string>
    <string name="sort_field_updated">更新时间</string>
    <string name="sort_field_default">默认</string>
    <string name="sort_order_asc">升序</string>
    <string name="sort_order_desc">降序</string>
    <string name="cancel_button">取消</string>
    <string name="confirm_button">确定</string>
    <string name="load_no_more_data">没有更多数据了</string>
    <string name="loading">正在加载...</string>
    <string name="search_key_cannot_null">搜索关键字不能为空</string>
    <string name="empty_data">还没有数据</string>
    <string-array name="search_types">
        <item>搜索仓库</item>
        <item>搜索用户</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_webview">浏览器</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
